# open-phri

./: .clang-format  .clang_complete  .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.cmake  CMakeLists.pid  CMakeLists.txt  README.md  TODO  license.txt  pid  pid.bat
.circleci/: config.yml
apps/: CMakeLists.cmake  CMakeLists.pid  CMakeLists.txt
apps/controller_benchmark/: main.cpp
apps/demo/: main.cpp  state_machine.cpp  state_machine.h
apps/force_control_example/: main.cpp
apps/joint_trajectory_generator_example/: main.cpp
apps/null_space_motion_example/: main.cpp
apps/obstacle_avoidance_example/: main.cpp  main.py
apps/path_follower_example/: main.cpp  main.py
apps/separation_distance_example/: main.cpp  main.py
apps/stop_constraint_example/: main.cpp  main.py
apps/stop_controller_example/: main.cpp  main.py
apps/test_app/: main.cpp
apps/trajectory_generator_benchmark/: main.cpp
apps/trajectory_generator_example/: main.cpp  main.py
apps/velocity_constraint_example/: main.cpp  main.py
bindings/: CMakeLists.txt
bindings/julia/: CMakeLists.txt  RSCL.cpp
bindings/python/: CMakeLists.txt  RSCL.cpp  __init__.py  constraints.cpp  generators.cpp  interpolators.cpp  safety_controller.cpp  utilities.cpp
include/: adaptive_damping.h  constraint.h  definitions.h  iso10218_constraint.h  power_constraint.h  stop_constraint.h  stop_controller.h  velocity_constraint.h
share/: Doxyfile  instructions.md
src/: CMakeLists.cmake  CMakeLists.pid  CMakeLists.txt  adaptive_damping.cpp  iso10218_constraint.cpp  power_constraint.cpp  stop_constraint.cpp  stop_controller.cpp  velocity_constraint.cpp
src/OpenPHRI/: driver.cpp  robot.cpp  safety_controller.cpp  task_space_data_types.cpp
src/OpenPHRI/constraints/: acceleration_constraint.cpp  constraint.cpp  default_constraint.cpp  emergency_stop_constraint.cpp  force_constraint.cpp  force_constraint.cpp.OLD  joint_acceleration_constraint.cpp  joint_emergency_stop_constraint.cpp  joint_velocity_constraint.cpp  kinetic_energy_constraint.cpp  power_constraint.cpp  separation_distance_constraint.cpp  stop_constraint.cpp  task_emergency_stop_constraint.cpp  velocity_constraint.cpp
src/OpenPHRI/drivers/: driver.cpp  dummy_driver.cpp
src/OpenPHRI/force_generators/: external_force.cpp  force_generator.cpp  force_proxy.cpp  mass_generator.cpp  potential_field_generator.cpp  potential_field_generator.cpp.OLD  stiffness_generator.cpp
src/OpenPHRI/joint_force_generators/: joint_force_generator.cpp  joint_force_proxy.cpp
src/OpenPHRI/joint_velocity_generators/: joint_velocity_generator.cpp  joint_velocity_proxy.cpp  null_space_motion.cpp
src/OpenPHRI/torque_generators/: torque_generator.cpp  torque_proxy.cpp
src/OpenPHRI/utilities/: app_maker.cpp  clock.cpp  data_logger.cpp  deadband.cpp  demangle.cpp  derivator.cpp  fifth_order_polynomial.cpp  intergrator.cpp  interpolator.cpp  laser_scanner_detector.cpp  linear_interpolator.cpp  low_pass_filter.cpp  manipulator_equivalent_mass.cpp  path_follower.cpp  polynomial_interpolator.cpp  polynomial_root_finder.cpp  polynomial_root_finder.h  robot_model.cpp  task_space_trajectory_generator.cpp  trajectory_generator.cpp
src/OpenPHRI/velocity_generators/: force_control.cpp  velocity_generator.cpp  velocity_proxy.cpp
src/RSCL/: constant_force_generator.cpp  constant_velocity_generator.cpp  constraint.cpp  default_constraint.cpp  derivator.cpp  force_constraint.cpp  force_proxy.cpp  intergrator.cpp  interpolator.cpp  kinetic_energy_constraint.cpp  linear_interpolator.cpp  manipulator_equivalent_mass.cpp  mass_generator.cpp  polynomial_interpolator.cpp  potential_field_generator.cpp  power_constraint.cpp  robot.cpp  safety_controller.cpp  separation_distance_constraint.cpp  stiffness_generator.cpp  stop_constraint.cpp  velocity_constraint.cpp  velocity_proxy.cpp
src/RSCL/constraints/: acceleration_constraint.cpp  constraint.cpp  default_constraint.cpp  force_constraint.cpp  joint_velocity_constraint.cpp  kinetic_energy_constraint.cpp  power_constraint.cpp  separation_distance_constraint.cpp  stop_constraint.cpp  velocity_constraint.cpp
src/RSCL/force_generators/: external_force.cpp  force_generator.cpp  force_proxy.cpp  mass_generator.cpp  potential_field_generator.cpp  stiffness_generator.cpp
src/RSCL/joint_velocity_generators/: joint_velocity_generator.cpp  joint_velocity_proxy.cpp
src/RSCL/torque_generators/: torque_generator.cpp  torque_proxy.cpp
src/RSCL/utilities/: clock.cpp  data_logger.cpp  deadband.cpp  demangle.cpp  derivator.cpp  fifth_order_polynomial.cpp  intergrator.cpp  interpolator.cpp  laser_scanner_detector.cpp  linear_interpolator.cpp  manipulator_equivalent_mass.cpp  path_follower.cpp  polynomial_interpolator.cpp  trajectory_generator.cpp
src/RSCL/velocity_generators/: force_control.cpp  velocity_generator.cpp  velocity_proxy.cpp
src/pyOpenPHRI/: CMakeLists.txt  RSCL.cpp  __init__.py  constraints.cpp  double_wrappers.h  generators.cpp  interpolators.cpp  misc.cpp  safety_controller.cpp  utilities.cpp  vrep.cpp
src/pyRSCL/: CMakeLists.txt  RSCL.cpp  __init__.py  constraints.cpp  double_wrappers.h  generators.cpp  interpolators.cpp  misc.cpp  safety_controller.cpp  utilities.cpp  vrep.cpp
src/test-utils/: utils.cpp
src/vrep_driver/: vrep_driver.cpp
src/vrep_remote_api/: extApi.c  extApiInternal.h  extApiPlatform.c  v_repLib.h  v_repTypes.h
test/: CMakeLists.cmake  CMakeLists.pid  CMakeLists.txt
tests/: CMakeLists.txt  add_remove_constraints.cpp  add_remove_constraints.py  constant_generators.cpp  constant_generators.py  default_controller.cpp  velocity_constraint.cpp  velocity_constraint.py
tests/cpp/: add_remove_constraints.cpp  constant_generators.cpp  default_controller.cpp  interpolators.cpp  potential_field_generator.cpp  power_constraint.cpp  proxy_generators.cpp  stop_constraint.cpp  velocity_constraint.cpp
tests/julia/: test.jl
tests/python/: constant_generators.py  default_controller.py  potential_field_generator.py  power_constraint.py  proxy_generators.py  stop_constraint.py  velocity_constraint.py
(+369 files in other folders)
